// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSourceFileContentToBundle should get file content for empty presets list 1`] = `
"/* @jsx __uxpinParsePreset */



export {

};



function __uxpinParsePreset(type, props, ...children) {
  const displayName = typeof type === 'function'
        ? type.displayName || type.name || 'Unknown'
        : type;
   return {
    name: displayName,
    props: JSON.parse(JSON.stringify(props)),
    children: children,
  };
}
"
`;

exports[`getSourceFileContentToBundle should get file content for given presets 1`] = `
"/* @jsx __uxpinParsePreset */

import Preset65aaa443fa205a06ad85aaa3edf78068 from './src/components/Component1/presets/0-default.jsx';
import Preset630e58ad10445b0fa1f85852c4cd6bdf from './src/components/Component1/presets/1-alternative.jsx';
import Preset3dc3c7e21456554b87f2a933e5a3b691 from './src/components/Component2/presets/0-default.jsx';

export {
  Preset65aaa443fa205a06ad85aaa3edf78068,
  Preset630e58ad10445b0fa1f85852c4cd6bdf,
  Preset3dc3c7e21456554b87f2a933e5a3b691,
};



function __uxpinParsePreset(type, props, ...children) {
  const displayName = typeof type === 'function'
        ? type.displayName || type.name || 'Unknown'
        : type;
   return {
    name: displayName,
    props: JSON.parse(JSON.stringify(props)),
    children: children,
  };
}
"
`;
